Updated Weekly and Daily options to be tracked.

--- a/test.html
+++ b/test.html
@@ -70,8 +70,8 @@
         <label for="task-repeat">Repeat:</label><br />
         <select id="task-repeat">
           <option value="none">None</option>
-          <option value="weekly">Weekly</option>
-          <option value="yearly">Yearly</option>
+          <option id="task-daily">Daily</option>
+          <option id="task-weekly">Weekly</option>
         </select>
         <br />
         <br />
