--- a/login.html
+++ b/login.html
@@ -56,8 +56,8 @@
     <!---------------------------------------------->
     <!-- Your own JavaScript functions go here    -->
     <!---------------------------------------------->
-    <script src="firebaseAPI.js"></script>
-    <script src="authentication.js"></script>
+    <script src="/js/firebaseAPI.js"></script>
+    <script src="/js/authentication.js"></script>
     <!-- <script src="./scripts/script.js"></script> -->
 
 
